# Snako

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp
src/Source/: controller.cpp  map.cpp  point.cpp  snake.cpp  startinterface.cpp
